@@ -2,147 +2,42 @@ groups:
   Default:
     default: true
     permissions:
-    - essentials.help
-    - essentials.helpop
-    - essentials.list
-    - essentials.motd
-    - essentials.rules
-    - essentials.spawn
-    - groupmanager.notify.self
-    inheritance: []
+    - -bukkit.command.kill
+    inheritance:
+    - g:essentials_default
+    - g:bukkit_default
     info:
       prefix: '&e'
       build: false
       suffix: ''
   Builder:
     default: false
-    permissions:
-    - essentials.afk
-    - essentials.back
-    - essentials.back.ondeath
-    - essentials.balance
-    - essentials.balance.others
-    - essentials.balancetop
-    - essentials.chat.color
-    - essentials.chat.shout
-    - essentials.chat.question
-    - essentials.compass
-    - essentials.depth
-    - essentials.home
-    - essentials.ignore
-    - essentials.kit
-    - essentials.kit.tools
-    - essentials.mail
-    - essentials.mail.send
-    - essentials.me
-    - essentials.msg
-    - essentials.nick
-    - essentials.pay
-    - essentials.ping
-    - essentials.powertool
-    - essentials.protect
-    - essentials.sethome
-    - essentials.signs.use.*
-    - essentials.signs.create.disposal
-    - essentials.signs.create.mail
-    - essentials.signs.create.protection
-    - essentials.signs.create.trade
-    - essentials.signs.break.disposal
-    - essentials.signs.break.mail
-    - essentials.signs.break.protection
-    - essentials.signs.break.trade
-    - essentials.suicide
-    - essentials.time
-    - essentials.tpa
-    - essentials.tpaccept
-    - essentials.tpahere
-    - essentials.tpdeny
-    - essentials.warp
-    - essentials.warp.list
-    - essentials.worth
+    permissions: []
     inheritance:
     - default
+    - g:essentials_builder
     info:
       prefix: '&2'
       build: true
       suffix: ''
   Moderator:
     default: false
-    permissions:
-    - essentials.ban
-    - essentials.ban.notify
-    - essentials.banip
-    - essentials.broadcast
-    - essentials.clearinventory
-    - essentials.delwarp
-    - essentials.eco.loan
-    - essentials.ext
-    - essentials.getpos
-    - essentials.helpop.recieve
-    - essentials.home.others
-    - essentials.invsee
-    - essentials.jails
-    - essentials.jump
-    - essentials.kick
-    - essentials.kick.notify
-    - essentials.kill
-    - essentials.mute
-    - essentials.nick.others
-    - essentials.realname
-    - essentials.setwarp
-    - essentials.signs.create.*
-    - essentials.signs.break.*
-    - essentials.spawner
-    - essentials.thunder
-    - essentials.time
-    - essentials.time.set
-    - essentials.protect.alerts
-    - essentials.protect.admin
-    - essentials.protect.ownerinfo
-    - essentials.ptime
-    - essentials.ptime.others
-    - essentials.togglejail
-    - essentials.top
-    - essentials.tp
-    - essentials.tphere
-    - essentials.tppos
-    - essentials.tptoggle
-    - essentials.unban
-    - essentials.unbanip
-    - essentials.weather
-    - essentials.whois
-    - essentials.world
-    - groupmanager.listgroups
-    - groupmanager.mandemote
-    - groupmanager.manpromote
-    - groupmanager.manselect
-    - groupmanager.manuadd
-    - groupmanager.manudel
-    - groupmanager.manwhois
-    - groupmanager.notify.other
+    permissions: []
     inheritance:
     - builder
+    - g:essentials_moderator
+    - g:bukkit_moderator
     info:
       prefix: '&5'
       build: true
       suffix: ''
   Admin:
     default: false
-    permissions:
-    - -essentials.backup
-    - -essentials.essentials
-    - -essentials.setspawn
-    - -essentials.reloadall
-    - -essentials.plugin
-    - essentials.*
-    - groupmanager.mantogglevalidate
-    - groupmanager.mansave
-    - groupmanager.mangcheckp
-    - groupmanager.manglistp
-    - groupmanager.manucheckp
-    - groupmanager.manulistp
+    permissions: []
     inheritance:
     - moderator
+    - g:essentials_admin
+    - g:bukkit_admin
     info:
       prefix: '&c'
       build: true
